--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
-composer.phar
+/bower_components/
 /vendor/
+/config/config.inc.php
+/config/portfolio.json
+/cache.json
+/composer.phar
 
 # Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
 # You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
